--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 .container {
     width: min(100%, 1400px);
-    margin: auto
+    margin: auto;
+    padding-top: 136px;
 }
 
 /* header */
@@ -11,6 +12,14 @@ header {
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: fixed;
+    max-width: inherit;
+    width: inherit;
+    left: 50%;
+    transform: translate(-50%);
+    top: 0;
+    z-index: 1;
+
 }
 
 ul {
@@ -33,4 +42,152 @@ ul {
 .fa-solid {
     color: #FCC21B;
     font-size: 40px;
+}
+
+/* section */
+.section_1 {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 100px;
+    /* position: relative; */
+
+}
+
+.section1_img {
+    width: 100%;
+    height: 640px;
+    object-fit: cover;
+}
+
+.section1_div {
+    background-color: #FCC21B;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 762px;
+    padding: 34px 40px;
+}
+
+.section1_h2 {
+    margin-bottom: 32px;
+    color: #FFFFFF;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 56px;
+    text-shadow: 0 6px 4px #000000 ;
+}
+
+.section1_button {
+    background-color: #FCC21B;
+    width: 224px;
+    height: 52px;
+    color: #FFFFFF;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 28px;
+    box-shadow: 0 2px 4px #000000;
+    border: 3px solid #FFFFFF;
+}
+
+/* section2 */
+.section_2 {
+
+
+    width: calc(1200 / 1400 *100%);
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+
+
+}
+
+.section2_div {
+    margin-left: 100px;
+    width: 400px;
+    height: 376px;
+}
+
+.section_h2 {
+    font-size: 40px;
+    color: #372D23;
+    font-weight: 700;
+    line-height: 48px;
+}
+
+.section_p {
+    font-size: 20px;
+    font-weight: 400;
+    color: #855C52;
+    line-height: 28px;
+    margin: 40px 0;
+}
+
+.section2_button {
+    Width: 211px;
+    Height: 52px;
+    background-color: #ED6C30;
+    color: #FFFFFF;
+}
+
+.section2_a:hover {
+    
+    box-shadow: 3 3 10px ;
+}
+
+.section2_button:hover {
+    cursor: pointer;
+    box-shadow: 0 0 10px chocolate,
+        o o 20px chocolate,
+        o o 40px chocolate;
+}
+
+/* footer */
+footer {
+    display: flex;
+    background-color: #372D23;
+    padding: 32px 80px;
+    justify-content: space-between;
+    margin-top: 100px;
+}
+
+.footer_div1 {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.footer_h2 {
+    font-size: 20px;
+    color: #FFFFFF;
+    font-weight: 400;
+    line-height: 28px;
+    margin-bottom: 16px;
+}
+
+.middle_line {
+    margin: 8px 0;
+}
+
+.footer_a1 {
+    color: #FCC21B;
+    font-size: 16px;
+
+}
+
+.fa-brands {
+    font-size: 20px;
+    color: #FCC21B;
+
+}
+
+.fa-brands:hover {
+    cursor: pointer;
+    filter: drop-shadow(0 0 10px #FCC21B);
+}
+.fa-linkedin-in{
+    margin-inline: 16px;
+}
+.fa-tiktok{
+    margin-left: 16px;
 }
